Update build asset names

--- a/.github/workflows/test-linux-flatpak.yml
+++ b/.github/workflows/test-linux-flatpak.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Build .flatpak
         uses: flatpak/flatpak-github-actions/flatpak-builder@master
         with:
-          bundle: PicGuard_${{ steps.version_step.outputs.version }}_linux_x86_64.flatpak
+          bundle: PicGuard_${{ steps.version_step.outputs.version }}_linux_amd64.flatpak
           manifest-path: flatpak/com.kjxbyz.PicGuard.json
           cache: true
           restore-cache: true
