--- a/.github/workflows/test-linux-snapcraft.yml
+++ b/.github/workflows/test-linux-snapcraft.yml
@@ -45,7 +45,7 @@ jobs:
         run: |
           # https://snapcraft.io/docs/flutter-applications
           version=$(yq '.version' pubspec.yaml)
-          snapcraft --output "picguard_"$version"_linux_x86_64.snap"
+          snapcraft --output "picguard_"$version"_linux_amd64.snap"
 
       # Package the build.
       - name: Copy build for snap
