--- a/.github/workflows/test-macos-pkg.yml
+++ b/.github/workflows/test-macos-pkg.yml
@@ -137,7 +137,7 @@ jobs:
           echo "$VERSION"
           ls -la *.pkg
           rm -f PicGuard-unsigned.pkg
-          mv PicGuard.pkg PicGuard_"$VERSION".pkg
+          mv PicGuard.pkg PicGuard_"$VERSION"_macos_universal.pkg
           ls -la *.pkg
         working-directory: build/macos/Build/Products/Release
         env:
