--- a/.github/workflows/test-windows-zip.yml
+++ b/.github/workflows/test-windows-zip.yml
@@ -38,7 +38,7 @@ jobs:
 
       - name: Build zip
         run: |
-          flutter_distributor package --flutter-build-args "dart-define-from-file=.env" --platform windows --targets zip --artifact-name '{{name}}_{{build_name}}+{{build_number}}_{{platform}}_x86_64.{{ext}}'
+          flutter_distributor package --flutter-build-args "dart-define-from-file=.env" --platform windows --targets zip --artifact-name '{{name}}_{{build_name}}+{{build_number}}_{{platform}}_x64.{{ext}}'
 
       # Package the build.
       - name: Copy build for zip
