--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1306,7 +1306,7 @@ jobs:
       - name: Build AppImage
         run: |
           VERSION_SUFFIX="$([[ "$ENV" == "staging" ]] && echo ".pre" || echo "")"
-          flutter_distributor package --flutter-build-args "dart-define-from-file=.env,target-platform=linux-x64" --platform linux --targets appimage --artifact-name {{name}}_{{build_name}}+{{build_number}}"$VERSION_SUFFIX"_{{platform}}_x86_64.{{ext}}
+          flutter_distributor package --flutter-build-args "dart-define-from-file=.env,target-platform=linux-x64" --platform linux --targets appimage --artifact-name {{name}}_{{build_name}}+{{build_number}}"$VERSION_SUFFIX"_{{platform}}_amd64.{{ext}}
         env:
           ENV: ${{ github.event.inputs.env }}
 
@@ -1517,7 +1517,7 @@ jobs:
       - name: Build deb
         run: |
           VERSION_SUFFIX="$([[ "$ENV" == "staging" ]] && echo ".pre" || echo "")"
-          flutter_distributor package --flutter-build-args "dart-define-from-file=.env,target-platform=linux-x64" --platform linux --targets deb --artifact-name {{name}}_{{build_name}}+{{build_number}}"$VERSION_SUFFIX"_{{platform}}_x86_64.{{ext}}
+          flutter_distributor package --flutter-build-args "dart-define-from-file=.env,target-platform=linux-x64" --platform linux --targets deb --artifact-name {{name}}_{{build_name}}+{{build_number}}"$VERSION_SUFFIX"_{{platform}}_amd64.{{ext}}
         env:
           ENV: ${{ github.event.inputs.env }}
 
@@ -1723,7 +1723,7 @@ jobs:
       - name: Build RPM
         run: |
           VERSION_SUFFIX="$([[ "$ENV" == "staging" ]] && echo ".pre" || echo "")"
-          flutter_distributor package --flutter-build-args "dart-define-from-file=.env,target-platform=linux-x64" --platform linux --targets rpm --artifact-name {{name}}_{{build_name}}+{{build_number}}"$VERSION_SUFFIX"_{{platform}}_x86_64.{{ext}}
+          flutter_distributor package --flutter-build-args "dart-define-from-file=.env,target-platform=linux-x64" --platform linux --targets rpm --artifact-name {{name}}_{{build_name}}+{{build_number}}"$VERSION_SUFFIX"_{{platform}}_amd64.{{ext}}
         env:
           ENV: ${{ github.event.inputs.env }}
 
@@ -1950,7 +1950,7 @@ jobs:
       - name: Build zip
         run: |
           VERSION_SUFFIX="$([[ "$ENV" == "staging" ]] && echo ".pre" || echo "")"
-          flutter_distributor package --flutter-build-args "dart-define-from-file=.env,target-platform=linux-x64" --platform linux --targets zip --artifact-name {{name}}_{{build_name}}+{{build_number}}"$VERSION_SUFFIX"_{{platform}}_x86_64.{{ext}}
+          flutter_distributor package --flutter-build-args "dart-define-from-file=.env,target-platform=linux-x64" --platform linux --targets zip --artifact-name {{name}}_{{build_name}}+{{build_number}}"$VERSION_SUFFIX"_{{platform}}_amd64.{{ext}}
         env:
           ENV: ${{ github.event.inputs.env }}
 
@@ -2155,7 +2155,7 @@ jobs:
         run: |
           baseDir=$(pwd)
           RELEASE="$([[ "$ENV" == "staging" ]] && echo "$VERSION.pre" || echo "$VERSION")"
-          archiveName="picguard_"$RELEASE"_linux_x86_64.tar.gz"
+          archiveName="picguard_"$RELEASE"_linux_amd64.tar.gz"
           cd build/linux/x64/release/bundle
           tar -czaf $archiveName ./*
           mv $archiveName $GITHUB_WORKSPACE/
@@ -2340,7 +2340,7 @@ jobs:
           # Update flatpak/com.kjxbyz.PicGuard.json
           TAG="$([[ "$ENV" == "staging" ]] && echo "$TAG_NAME.pre" || echo "$TAG_NAME")"
           RELEASE="$([[ "$ENV" == "staging" ]] && echo "$VERSION.pre" || echo "$VERSION")"
-          url=https://github.com/picguard/picguard/releases/download/"$TAG"/picguard_"$RELEASE"_linux_x86_64.tar.gz
+          url=https://github.com/picguard/picguard/releases/download/"$TAG"/picguard_"$RELEASE"_linux_amd64.tar.gz
           wget -O downloaded.tar.gz "$url"
           sha256=$(sha256sum downloaded.tar.gz | awk '{print $1}')
           rm -f downloaded.tar.gz
@@ -2370,7 +2370,7 @@ jobs:
         run: |
           ls -la
           RELEASE="$([[ "$ENV" == "staging" ]] && echo "$VERSION.pre" || echo "$VERSION")"
-          mv ./PicGuard.flatpak $GITHUB_WORKSPACE/PicGuard_"$RELEASE"_linux_x86_64.flatpak
+          mv ./PicGuard.flatpak $GITHUB_WORKSPACE/PicGuard_"$RELEASE"_linux_amd64.flatpak
         env:
           ENV: ${{ github.event.inputs.env }}
           VERSION: "${{ needs.create_release.outputs.version }}"
@@ -2561,7 +2561,7 @@ jobs:
         run: |
           # https://snapcraft.io/docs/flutter-applications
           RELEASE="$([[ "$ENV" == "staging" ]] && echo "$VERSION.pre" || echo "$VERSION")"
-          snapcraft --output picguard_"$RELEASE"_linux_x86_64.snap
+          snapcraft --output picguard_"$RELEASE"_linux_amd64.snap
         env:
           ENV: ${{ github.event.inputs.env }}
           VERSION: ${{ needs.create_release.outputs.version }}
@@ -2667,7 +2667,7 @@ jobs:
       - name: Create msix
         run: |
           $RELEASE = $(If ($env:ENV -eq "staging") {"$env:VERSION.pre"} Else {"$env:VERSION"})
-          dart run msix:create --build-windows false --output-name "picguard_$RELEASE`_windows_x86_64"
+          dart run msix:create --build-windows false --output-name "picguard_$RELEASE`_windows_x64"
         env:
           ENV: ${{ github.event.inputs.env }}
           VERSION: ${{ needs.create_release.outputs.version }}
@@ -2808,7 +2808,7 @@ jobs:
       - name: Build exe
         run: |
           $VERSION_SUFFIX = $(If ($env:ENV -eq "staging") {".pre"} Else {""})
-          flutter_distributor package --flutter-build-args "dart-define-from-file=.env" --platform windows --targets exe --artifact-name "{{name}}_{{build_name}}+{{build_number}}$VERSION_SUFFIX`_{{platform}}_x86_64.{{ext}}"
+          flutter_distributor package --flutter-build-args "dart-define-from-file=.env" --platform windows --targets exe --artifact-name "{{name}}_{{build_name}}+{{build_number}}$VERSION_SUFFIX`_{{platform}}_x64.{{ext}}"
         env:
           ENV: ${{ github.event.inputs.env }}
 
@@ -2925,7 +2925,7 @@ jobs:
       - name: Build zip
         run: |
           $VERSION_SUFFIX = $(If ($env:ENV -eq "staging") {".pre"} Else {""})
-          flutter_distributor package --flutter-build-args "dart-define-from-file=.env" --platform windows --targets zip --artifact-name "{{name}}_{{build_name}}+{{build_number}}$VERSION_SUFFIX`_{{platform}}_x86_64.{{ext}}"
+          flutter_distributor package --flutter-build-args "dart-define-from-file=.env" --platform windows --targets zip --artifact-name "{{name}}_{{build_name}}+{{build_number}}$VERSION_SUFFIX`_{{platform}}_x64.{{ext}}"
         env:
           ENV: ${{ github.event.inputs.env }}
 
