--- a/.github/workflows/test-windows-msix.yml
+++ b/.github/workflows/test-windows-msix.yml
@@ -103,7 +103,7 @@ jobs:
 
       - name: Crate msix
         run: |
-          dart run msix:create --build-windows false --output-name "picguard_$env:VERSION`_windows_x86_64"
+          dart run msix:create --build-windows false --output-name "picguard_$env:VERSION`_windows_x64"
         env:
           VERSION: ${{ needs.get_version.outputs.version }}
 
