--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2595,6 +2595,8 @@ jobs:
   windows_msi:
     name: Create windows msi
     runs-on: windows-latest
+    env:
+      Platform: x64
     needs:
       - create_release
     steps:
@@ -2683,12 +2685,12 @@ jobs:
           $bytes = echo $env:WINDOWS_CERTIFICATE | %{[Convert]::FromBase64String($_)}
           [IO.File]::WriteAllBytes("$certificatePath", $bytes)
 
-          $env:FLUTTER_BUILD_OUTPUT_DIR = "$pwd\build\windows\x64\runner\Release"
-          $env:VISUAL_STUDIO_REDIST_DIR = "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Redist\MSVC\14.40.33807\x64\Microsoft.VC143.CRT"
-          dotnet build .\msi\picguard\picguard.wixproj --arch x64 --configuration Release
+          $env:FLUTTER_BUILD_OUTPUT_DIR = "$pwd\build\windows\$env:Platform\runner\Release"
+          $env:VISUAL_STUDIO_REDIST_DIR = "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Redist\MSVC\14.40.33807\$env:Platform\Microsoft.VC143.CRT"
+          dotnet build .\msi\picguard\picguard.wixproj --arch "$env:Platform" --configuration Release
 
           $signtool = "C:\Program Files (x86)\Microsoft SDKs\ClickOnce\SignTool\signtool.exe"
-          & $signtool sign /v /f "$certificatePath" /fd SHA256 /t http://timestamp.comodoca.com/authenticode /p "$env:WINDOWS_CERTIFICATE_PASSWORD" /n "$env:WINDOWS_PUBLISHER_NAME" (get-item ".\msi\picguard\bin\Release\*\*.msi")
+          & $signtool sign /v /f "$certificatePath" /fd SHA256 /t http://timestamp.comodoca.com/authenticode /p "$env:WINDOWS_CERTIFICATE_PASSWORD" /n "$env:WINDOWS_PUBLISHER_NAME" (get-item ".\msi\picguard\bin\$env:Platform\Release\*\*.msi")
         env:
           WINDOWS_PUBLISHER_NAME: ${{ secrets.WINDOWS_PUBLISHER_NAME }}
           WINDOWS_CERTIFICATE: ${{ secrets.WINDOWS_CERTIFICATE }}
@@ -2699,10 +2701,10 @@ jobs:
         shell: pwsh
         run: |
           $RELEASE = $(If ($env:ENV -eq "staging") {"$env:VERSION.pre"} Else {"$env:VERSION"})
-          Rename-Item -Path "$pwd\msi\picguard\bin\Release\en-US\picguard.msi" -NewName "picguard_$RELEASE`_windows_x64_en-US.msi"
-          Rename-Item -Path "$pwd\msi\picguard\bin\Release\zh-CN\picguard.msi" -NewName "picguard_$RELEASE`_windows_x64_zh-CN.msi"
-          ls -R .\msi\picguard\bin\Release
-          cp .\msi\picguard\bin\Release\*\*.msi "$env:GITHUB_WORKSPACE\"
+          Rename-Item -Path "$pwd\msi\picguard\bin\$env:Platform\Release\en-US\picguard.msi" -NewName "picguard_$RELEASE`_windows_$env:Platform`_en-US.msi"
+          Rename-Item -Path "$pwd\msi\picguard\bin\$env:Platform\Release\zh-CN\picguard.msi" -NewName "picguard_$RELEASE`_windows_$env:Platform`_zh-CN.msi"
+          ls -R ".\msi\picguard\bin\$env:Platform\Release"
+          cp ".\msi\picguard\bin\$env:Platform\Release\*\*.msi" "$env:GITHUB_WORKSPACE\"
         env:
           ENV: ${{ github.event.inputs.env }}
           VERSION: ${{ needs.create_release.outputs.version }}
