--- a/.github/workflows/test-windows-msi.yml
+++ b/.github/workflows/test-windows-msi.yml
@@ -36,6 +36,8 @@ jobs:
   msi:
     name: Create msi
     runs-on: windows-latest
+    env:
+      Platform: x64
     needs:
       - get_version
     steps:
@@ -98,12 +100,12 @@ jobs:
           $bytes = echo $env:WINDOWS_CERTIFICATE | %{[Convert]::FromBase64String($_)}
           [IO.File]::WriteAllBytes("$certificatePath", $bytes)
 
-          $env:FLUTTER_BUILD_OUTPUT_DIR = "$pwd\build\windows\x64\runner\Release"
-          $env:VISUAL_STUDIO_REDIST_DIR = "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Redist\MSVC\14.40.33807\x64\Microsoft.VC143.CRT"
-          dotnet build .\msi\picguard\picguard.wixproj --arch x64 --configuration Release
+          $env:FLUTTER_BUILD_OUTPUT_DIR = "$pwd\build\windows\$env:Platform\runner\Release"
+          $env:VISUAL_STUDIO_REDIST_DIR = "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Redist\MSVC\14.40.33807\$env:Platform\Microsoft.VC143.CRT"
+          dotnet build .\msi\picguard\picguard.wixproj --arch "$env:Platform" --configuration Release
 
           $signtool = "C:\Program Files (x86)\Microsoft SDKs\ClickOnce\SignTool\signtool.exe"
-          & $signtool sign /v /f "$certificatePath" /fd SHA256 /t http://timestamp.comodoca.com/authenticode /p "$env:WINDOWS_CERTIFICATE_PASSWORD" /n "$env:WINDOWS_PUBLISHER_NAME" (get-item ".\msi\picguard\bin\Release\*\*.msi")
+          & $signtool sign /v /f "$certificatePath" /fd SHA256 /t http://timestamp.comodoca.com/authenticode /p "$env:WINDOWS_CERTIFICATE_PASSWORD" /n "$env:WINDOWS_PUBLISHER_NAME" (get-item ".\msi\picguard\bin\$env:Platform\Release\*\*.msi")
         env:
           WINDOWS_PUBLISHER_NAME: ${{ secrets.WINDOWS_PUBLISHER_NAME }}
           WINDOWS_CERTIFICATE: ${{ secrets.WINDOWS_CERTIFICATE }}
@@ -113,8 +115,8 @@ jobs:
       - name: Copy build for msi
         shell: pwsh
         run: |
-          Rename-Item -Path "$pwd\msi\picguard\bin\Release\en-US\picguard.msi" -NewName "picguard_$env:VERSION`_windows_x64_en-US.msi"
-          Rename-Item -Path "$pwd\msi\picguard\bin\Release\zh-CN\picguard.msi" -NewName "picguard_$env:VERSION`_windows_x64_zh-CN.msi"
+          Rename-Item -Path "$pwd\msi\picguard\bin\$env:Platform\Release\en-US\picguard.msi" -NewName "picguard_$env:VERSION`_windows_$env:Platform`_en-US.msi"
+          Rename-Item -Path "$pwd\msi\picguard\bin\$env:Platform\Release\zh-CN\picguard.msi" -NewName "picguard_$env:VERSION`_windows_$env:Platform`_zh-CN.msi"
         env:
           VERSION: ${{ needs.get_version.outputs.version }}
 
@@ -122,7 +124,7 @@ jobs:
         with:
           name: windows-msi-artifact
           path: |
-            .\msi\picguard\bin\Release\*\*.msi
+            .\msi\picguard\bin\${{ env.Platform }}\Release\*\*.msi
 
       - name: Clean up
         if: ${{ always() }}
