--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,10 @@ dependencies:
   collection: ^1.18.0
   cupertino_icons: ^1.0.8
   device_info_plus: ^10.1.0
-  file_picker: ^8.0.5
+  file_saver: ^0.2.13
   flutter:
     sdk: flutter
+  flutter_easyloading: ^3.0.5
   flutter_form_builder: ^9.2.1
   flutter_gen: ^5.6.0
   flutter_localizations:
@@ -46,7 +47,10 @@ dependencies:
   fluttertoast: ^8.2.6
   form_builder_validators: ^9.1.0
   gap: ^3.0.1
+  image_gallery_saver: #8c6480bf3a07834df89525e7ac6e0196ec701f73
+    path: ./plugins/image_gallery_saver
   image_picker: ^1.1.2
+  intl: ^0.18.1
   keyboard_dismisser: ^3.0.0
   logging: ^1.2.0
   mime: ^1.0.5
@@ -55,11 +59,11 @@ dependencies:
   permission_handler: ^11.3.1
   photo_view: ^0.15.0
   reorderables: ^0.6.0
-  sentry: ^8.4.0
-  sentry_flutter: ^8.4.0
-  sentry_logging: ^8.4.0
+  sentry: ^8.5.0
+  sentry_flutter: ^8.5.0
+  sentry_logging: ^8.5.0
   shared_preferences: ^2.2.3
-  slang: ^3.31.0
+  slang: ^3.31.1
   slang_flutter: ^3.31.0
   syncfusion_flutter_core: ^25.2.4
   syncfusion_flutter_sliders: ^25.2.4
