Added husk & lint_staged

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -21,6 +21,7 @@ linter:
   # `// ignore_for_file: name_of_lint` syntax on the line or in the file
   # producing the lint.
   rules:
+    directives_ordering: false
     public_member_api_docs: false
     lines_longer_than_80_chars: false
 
