--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,9 @@ dev_dependencies:
   flutter_gen_runner: ^5.6.0
   flutter_test:
     sdk: flutter
+  husky: ^0.1.7
+  import_sorter: ^4.6.0
+  lint_staged: ^0.5.1
   msix: ^3.16.7
   slang_build_runner: ^3.31.0
   very_good_analysis: ^6.0.0
@@ -148,3 +151,11 @@ flutter_gen:
 #    flare_flutter: true
 #    rive: true
 #    lottie: true
+
+import_sorter:
+  ignored_files: # Optional, defaults to []
+    - \/lib\/gen\/*
+    - \/lib\/i18n\/*
+
+lint_staged:
+  'lib/**.dart': fvm dart run import_sorter:main lib\/* test\/* && git add --all
