Update GitHub Actions

--- a/.github/workflows/test-linux-rpm.yml
+++ b/.github/workflows/test-linux-rpm.yml
@@ -1,4 +1,4 @@
-name: Test Linux AppImage
+name: Test Linux rpm
 
 on:
   workflow_dispatch:
@@ -7,19 +7,22 @@ on:
 permissions: read-all
 
 jobs:
-  appimage:
-    name: Create linux appimage
+  rpm:
+    name: Create linux rpm
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Setup Java
+        uses: actions/setup-java@v4
+        with:
+          java-version: "17.x"
+          distribution: 'temurin'
 
       - name: Install dependencies for Linux
         run: |
           sudo apt update
           sudo apt install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev
-          sudo apt install -y locate libfuse2
-          wget -O appimagetool "https://github.com/AppImage/AppImageKit/releases/download/continuous/appimagetool-x86_64.AppImage"
-          chmod +x appimagetool && mv appimagetool /usr/local/bin/
+          sudo apt install -y rpm patchelf
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
@@ -42,19 +45,19 @@ jobs:
       - name: Install flutter dependencies
         run: flutter pub get
 
-      - name: Build AppImage
-        run: flutter_distributor package --flutter-build-args "dart-define-from-file=.env,target-platform=linux-x64" --platform linux --targets appimage --artifact-name '{{name}}_{{build_name}}+{{build_number}}_{{platform}}_amd64.{{ext}}'
+      - name: Build RPM
+        run: flutter_distributor package --flutter-build-args "dart-define-from-file=.env,target-platform=linux-x64" --platform linux --targets rpm --artifact-name '{{name}}_{{build_name}}+{{build_number}}_{{platform}}_amd64.{{ext}}'
 
       # Package the build.
-      - name: Copy build for AppImage
+      - name: Copy build for rpm
         run: ls -laR
         working-directory: dist
 
       - uses: actions/upload-artifact@v4
         with:
-          name: linux-appimage-artifact
+          name: linux-rpm-artifact
           path: |
-            ./dist/**/*.AppImage
+            ./dist/**/*.rpm
 
       - name: Clean up
         if: ${{ always() }}
