--- a/.github/workflows/test-linux-deb.yml
+++ b/.github/workflows/test-linux-deb.yml
@@ -1,4 +1,4 @@
-name: Test Linux AppImage
+name: Test Linux deb
 
 on:
   workflow_dispatch:
@@ -7,8 +7,8 @@ on:
 permissions: read-all
 
 jobs:
-  appimage:
-    name: Create linux appimage
+  deb:
+    name: Create linux deb
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -17,9 +17,6 @@ jobs:
         run: |
           sudo apt update
           sudo apt install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev
-          sudo apt install -y locate libfuse2
-          wget -O appimagetool "https://github.com/AppImage/AppImageKit/releases/download/continuous/appimagetool-x86_64.AppImage"
-          chmod +x appimagetool && mv appimagetool /usr/local/bin/
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
@@ -42,19 +39,19 @@ jobs:
       - name: Install flutter dependencies
         run: flutter pub get
 
-      - name: Build AppImage
-        run: flutter_distributor package --flutter-build-args "dart-define-from-file=.env,target-platform=linux-x64" --platform linux --targets appimage --artifact-name '{{name}}_{{build_name}}+{{build_number}}_{{platform}}_amd64.{{ext}}'
+      - name: Build deb
+        run: flutter_distributor package --flutter-build-args "dart-define-from-file=.env,target-platform=linux-x64" --platform linux --targets deb --artifact-name '{{name}}_{{build_name}}+{{build_number}}_{{platform}}_amd64.{{ext}}'
 
       # Package the build.
-      - name: Copy build for AppImage
+      - name: Copy build for deb
         run: ls -laR
         working-directory: dist
 
       - uses: actions/upload-artifact@v4
         with:
-          name: linux-appimage-artifact
+          name: linux-deb-artifact
           path: |
-            ./dist/**/*.AppImage
+            ./dist/**/*.deb
 
       - name: Clean up
         if: ${{ always() }}
